src/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this certification is active.</description>
        <inlineHelpText>Whether this certification is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <defaultValue>0</defaultValue>
        <description>f</description>
        <inlineHelpText>The number of days before proof of this certification must be provided after initial hire.</inlineHelpText>
        <label>Initial</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General notes/comments regarding this certification.</description>
        <inlineHelpText>General notes/comments regarding this certification.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <description>The number of days before this certification will expire.</description>
        <inlineHelpText>The number of days before this certification will expire.</inlineHelpText>
        <label>Renewal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Initial__c</columns>
        <columns>Renewal__c</columns>
        <columns>Notes__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Certifications</fullName>
        <columns>NAME</columns>
        <columns>Initial__c</columns>
        <columns>Renewal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Certifications</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_have_Initial_Or_Renew_Days</fullName>
        <active>true</active>
        <description>There must be either an Initial number of days or Renewal number of days</description>
        <errorConditionFormula>AND(ISBLANK( Initial__c ),
ISBLANK(Renewal__c))</errorConditionFormula>
        <errorMessage>Either Initial days or Renewal days must be set</errorMessage>
    </validationRules>
</CustomObject>